Revise publication details and abstract for TFT paper
Updated paper URL and citation for the publication. Revised abstract to reflect new findings and improvements in conflict forecasting methods.

--- a/_publications/2026-01-23-tft.md
+++ b/_publications/2026-01-23-tft.md
@@ -5,8 +5,8 @@ permalink: /publication/2026-01-23-tft
 excerpt: 'In this paper we predict conflict fatalities with temporal fusion transformers as part of the 2023/24 edition of the VIEWS Prediction Challenge.'
 date: 2026-01-23
 venue: 'International Interactions'
-paperurl: 'https://doi.org/10.1177/07388942261422045'
-citation: 'Walterskirchen, J. (2026). Text as Data for Crisis-Early Warning: A Comparative Assessment of NLP Methods for Conflict Prediction. Forthcoming, Conflict Management and Peace Science'
+paperurl: 'https://doi.org/10.31235/osf.io/7xu93_v2'
+citation: 'Walterskirchen J, Oswald C, Häffner S, Binetti MN. Taking time seriously: Predicting conflict fatalities using temporal fusion transformers. Conditionally accepted, International Interactions'
 ---
-Abstract: Natural language processing (NLP) tools have been applied successfully in improving predictions in a wide range of research areas. However, what works in one area may not work in conflict research. This paper therefore seeks to offer an initial assessment of the most prominent NLP methods for conflict prediction tasks. It evaluates the performance of features extracted from a conflict dictionary, two sentiment dictionaries, a word-scaling approach, dynamic topic models, and a transformer model on a classical conflict prediction task. The results highlight the importance of considering different NLP approaches, depending on the availability of text sources and other predictor variables.
-[Download paper here](https://doi.org/10.1177/07388942261422045)
+Abstract: Previous conflict forecasting efforts identified three areas for improvement:  the importance of spatiotemporal dependencies and nonlinearities and the further exploitation of latent information in conflict variables, a lack of interpretability in return for high accuracy of complex algorithms, and the need to quantify prediction uncertainty. We predict conflict fatalities with temporal fusion transformers which have several desirable features for forecasting, addressing all these points.  First, they can produce multi-horizon forecasts and probabilistic predictions, offering a flexible and nonparametric approach. Second, they can incorporate time-invariant covariates, known future inputs, and other exogenous time series, which allows to identify globally important variables, persistent temporal patterns, and significant events.  Third, this approach puts a strong focus on interpretability so that we can investigate temporal dynamics more thoroughly.  Ourapproach outperforms benchmarks from an award-winning early warning system over several metrics and test windows and is a valuable addition to the forecaster’s toolkit.
+[Download paper here](https://doi.org/10.31235/osf.io/7xu93_v2)
