--- a/_publications/2026-01-23-tft.md
+++ b/_publications/2026-01-23-tft.md
@@ -4,6 +4,7 @@ collection: publications
 permalink: /publication/2026-01-23-tft
 excerpt: 'In this paper we predict conflict fatalities with temporal fusion transformers as part of the 2023/24 edition of the VIEWS Prediction Challenge.'
 date: 2026-01-23
+status: 'conditionally accepted'
 venue: 'International Interactions'
 paperurl: 'https://doi.org/10.31235/osf.io/7xu93_v2'
 citation: 'Walterskirchen J, Oswald C, Häffner S, Binetti MN. Taking time seriously: Predicting conflict fatalities using temporal fusion transformers. Conditionally accepted, International Interactions'
